--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,88 +1,133 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+  box-sizing: border-box;
 }
 
-body {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+h1{
+  text-align: center;
+  font-family: fantasy;
+  margin-bottom: 40px;
 }
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+section{
+  width: 90%;
+  background-color: antiquewhite;
+  font-family: fantasy;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  position: relative;
 }
 
-.heading {
-    display: block;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.p2, .p4, .p6{
+  padding: 10px;
+  margin: 20px 0px 0px 0px;
 }
 
-.box {
-    border: 1px solid black;
-    width: 430px;
-    height: 145px;
-    background-color: rgb(167, 166, 166);
+.p1, .p3, .p5{
+  border: 1px solid black;
+  margin: 0;
+  position: absolute;
+  top: -0.5px;
+  right:-0.5px;
 }
 
-.chicken, .beef, .sushi {
-    display: flex;
-    justify-content: flex-end;
+.p1{
+  background-color: red;
 }
 
-.text {
-    margin: 10px;
+.p3{
+  background-color: chocolate;
 }
 
-.chicken p {
-    padding: 4px 30px;
-    border: 1px solid black;
-    border-top: none;
-    border-right: none;
-    background-color: pink;
+.p5{
+  background-color: slateblue;
 }
 
-.beef p {
-    padding: 4px 30px;
-    border: 1px solid black;
-    border-top: none;
-    border-right: none;
-    background-color: red;
-    color: white;
+.row{
+  width: 100%;
 }
 
-.sushi p {
-    padding: 4px 30px;
-    border: 1px solid black;
-    border-top: none;
-    border-right: none;
-    background-color: bisque;
+@media (min-width:992px){
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 
-.boxes {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    width: 1290px;
-}
-
-/* media query */
-
-/* for tablet */
-@media (min-width: 768px) and (max-width: 991px) {
-    .boxes {
-        grid-template-columns: repeat(2, 1fr);
+@media (min-width:768px) and (max-width:991px){
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+      float: left;
     }
-
-    .box3 {
-        display: grid;
-        grid-column: 1 / span 2;
+    .col-md-1 {
+      width: 8.33%;
     }
-}
+    .col-md-2 {
+      width: 16.66%;
+    }
+    .col-md-3 {
+      width: 25%;
+    }
+    .col-md-4 {
+      width: 33.33%;
+    }
+    .col-md-5 {
+      width: 41.66%;
+    }
+    .col-md-6 {
+      width: 50%;
+    }
+    .col-md-7 {
+      width: 58.33%;
+    }
+    .col-md-8 {
+      width: 66.66%;
+    }
+    .col-md-9 {
+      width: 74.99%;
+    }
+    .col-md-10 {
+      width: 83.33%;
+    }
+    .col-md-11 {
+      width: 91.66%;
+    }
+    .col-md-12 {
+      width: 100%;
+    }
+  }
