--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -4,14 +4,14 @@
 
 h1{
   text-align: center;
-  font-family: fantasy;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-bottom: 40px;
 }
 
 section{
   width: 90%;
-  background-color: antiquewhite;
-  font-family: fantasy;
+  background-color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -33,15 +33,15 @@ section{
 }
 
 .p1{
-  background-color: red;
+  background-color: pink;
 }
 
 .p3{
-  background-color: chocolate;
+  background-color: green;
 }
 
 .p5{
-  background-color: slateblue;
+  background-color: blue;
 }
 
 .row{
