--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -10,7 +10,7 @@ h1{
 
 section{
   width: 90%;
-  background-color: white;
+  background-color: aquamarine;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-top: 20px;
   margin-left: auto;
